--- a/레디미/index.html
+++ b/레디미/index.html
@@ -1,15 +1,43 @@
 ﻿<html>
 <head>
     <title>Register</title>
+    <style>
+        #input_id
+        {
+            position:absolute;
+            left:45%;
+            top:45%;
+        }
+        #input_pw {
+            position: absolute;
+            left: 45%;
+            top: 50%;
+        }
+        #btn_submit {
+            position: absolute;
+            left: 45%;
+            top: 55%;
+        }
+        body {
+            height: 100vh;
+            background-image: url('KakaoTalk_20210722_221947853.jpg');
+        }
+        #netflix {
+            position: absolute;
+            left: 10%;
+            top: 10%;
+        }
+    </style>
 </head>
 
 <body>
+
     <div>
         <form><input type="text" id="input_id"></form>
         <form><input type="password" id="input_pw"></form>
         <button id="btn_submit">Login</button>
     </div>
-    <div>
+    <!--<div>
         <img id="img" src="https://candykick.github.io/picrew_gallery/photos/All/p1.png" width="100" height="100">
         <p id="p_username">User Name</p>
         <p id="p_bio">Bio</p>
@@ -17,6 +45,9 @@
     <div>
         <p id="p_user_id">ID</p>
         <p id="p_access_token">AccessToken</p>
+    </div>-->
+    <div id="netflix">
+        <img src="netflix 1.png" / width="150" height="100">
     </div>
     <script src="./index.js"></script>
 </body>
